# whois

./: README.md  pyproject.toml
src/whois/: __init__.py  __main__.py  whois.py
