[project]
name = "whois"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "2.30am", email = "111672334+am230@users.noreply.github.com" },
]
dependencies = [
    "click>=8.1.7",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
whois = "whois.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/whois"]
